Add support for mariadb tolerations.  Quote node selector so "true" doesn't get confused with true

--- a/mariadb/values.yaml
+++ b/mariadb/values.yaml
@@ -208,6 +208,12 @@ pod:
         limits:
           memory: "1024Mi"
           cpu: "2000m"
+  tolerations:
+    server:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
 
 dependencies:
   dynamic:
