Add support for tolerations on the mariadb backup cron job

--- a/mariadb/values.yaml
+++ b/mariadb/values.yaml
@@ -214,6 +214,11 @@ pod:
       tolerations:
         - key: node-role.kubernetes.io/master
           operator: Exists
+    mariadb_backup:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
 
 dependencies:
   dynamic:
