--- a/mariadb/templates/cron-job-backup-mariadb.yaml
+++ b/mariadb/templates/cron-job-backup-mariadb.yaml
@@ -49,6 +49,9 @@ spec:
           labels:
 {{ tuple $envAll "mariadb-backup" "backup" | include "helm-toolkit.snippets.kubernetes_metadata_labels" | indent 12 }}
         spec:
+{{- if $envAll.Values.pod.tolerations.server.enabled }}
+{{- tuple $envAll "mariadb_backup" | include "helm-toolkit.snippets.kubernetes_tolerations" | indent 10 }}
+{{- end }}
 {{ dict "envAll" $envAll "application" "mariadb_backup" | include "helm-toolkit.snippets.kubernetes_pod_security_context" | indent 10 }}
           serviceAccountName: {{ $serviceAccountName }}
           restartPolicy: OnFailure
