--- a/rabbitmq/values.yaml
+++ b/rabbitmq/values.yaml
@@ -159,6 +159,22 @@ pod:
         limits:
           memory: "1024Mi"
           cpu: "2000m"
+  tolerations:
+    server:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+    prometheus_rabbitmq_exporter:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+    cluster_wait:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
 
 conf:
   enabled_plugins:
