Add tolerations support for memcached deployment

--- a/memcached/values.yaml
+++ b/memcached/values.yaml
@@ -207,4 +207,11 @@ pod:
         limits:
           memory: "1024Mi"
           cpu: "2000m"
+  tolerations:
+    server:
+      enabled: false
+      tolerations:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+
 ...
